--- a/src/Profile.css
+++ b/src/Profile.css
@@ -40,6 +40,8 @@
   flex-direction: column;
   align-items: center;
   padding-top: 18px;
+  padding-bottom: 5%; 
+
 }
 .profile-avatar-section {
   display: flex;
