--- a/src/Wallet.css
+++ b/src/Wallet.css
@@ -45,6 +45,7 @@
   justify-content: flex-start;
   width: 100%;
   margin-top: 24px;
+  padding-bottom: 3%;
 }
 .wallet-title {
   font-size: 2.6rem;
