--- a/src/ComingSoon.css
+++ b/src/ComingSoon.css
@@ -12,7 +12,7 @@
   margin-bottom: 18px;
 }
 .comingsoon-text {
-  color: #FFD600;
+  color: #39FF14;
   font-size: 2rem;
   font-weight: 600;
   letter-spacing: 1px;
